# sigint-bot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs
src/commands/: ctfnote.rs  ctftime.rs  mod.rs  register_commands.rs  welcome.rs
