[package]
name = "sigint-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.26"
tracing-subscriber = "0.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[dependencies.serenity]
features = ["framework", "standard_framework", "rustls_backend"]
version = "0.10.9"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal"]
