[package]
name = "sigint-bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.26"
tracing-subscriber = { "version" = "0.3.18", features = ["env-filter"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
poise = "0.6.1"
reqwest = { "version" = "0.11.11", features = ["json"] }
serde_json = "1.0.85"
chrono = { version = "0.4.22", features = ["serde"] }
slug = "0.1.5"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread", "signal", "time"]
